k8s/03-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: task04
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
    targetPort: 3306
