k8s/06-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: task04
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - port: 8080
    targetPort: 8080
